# QA

./: .gitignore  README.md  bibliotheque.db  blog.db  pyproject.toml  requirements.txt  test  test.db
e2e-tests/: test.py  test_download_python.py  test_google_search.py  test_python_website.py
e2e-tests/blog-app/: app.py  test-e2e.py
e2e-tests/python-website/: test_e2e_events_page.py
env/Scripts/: activate  activate.bat
examen/: e2e.py
examen/e2e/: e2e_test.py  exo3.py  python_web_site.py  scenario_e2e_test.py  test_python_website.py
examen/e2e-tests/: e2e-test.py  python-test-e2e.py
examen/integration-tests/: app.py  bibliotheque.db  bibliotheque_api_test.py  database_manager.py  integration_biblio.py  test.py  test_bibliothèque.py  test_database.py  tests.py  tests_integration.py
examen/performance-tests/: README  _locustfile.py  app.py  app2.0.py  app2.py  app_optimised.py  locustfile.py  optimised_app.py  optimized_app.py  test_performance.py
examen/unit-tests/: app.py  bibliotheque_test.py  gestion_biblio.py  test.py  test_bibliothèque.py  testapp.py  tests.py  (+1 more)
unit-tests/: CalcTest.py  CompteBancaire.py  CompteBancaireTest.py  EmailTest.py  EmailValidation.py  EmailValidationTest.py  Rectangle.py  TestClass.py  TestCompteBancaire.py  TestEmail.py  TestRectangle.py  calc.py  inventaire.py  rectangle.py  test-calc.py  test-compte-bancaire.py  test-email.py  test_CompteBancaire.py  test_EmailValidation.py  test_rectangle.py  testunit_compte_bancaire.py  testunit_rectangle.py
unit_tests/: EmailValidation.py  calc.py  inventaire.py  test_units.py
(+85 files in other folders)
